Day 4: second riddle solved.